Fri Aug 15 18:10:49 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (rb_econv_t): new field: last_error.

	* transcode.c (rb_trans_conv): new argument: result_position_ptr.
	  (rb_econv_convert): fill last_error.
	  (econv_result_to_symbol): extracted from econv_primitive_convert.
	  (econv_primitive_errinfo): new method.

Fri Aug 15 17:39:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (parse.{c,h}): creates in the dependency order.

Fri Aug 15 16:59:30 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (exec_event_hooks): skips RubyVM::FrozenCore.

	* vm.c (Init_VM): get rid of SEGV in a trace proc.

Fri Aug 15 09:33:48 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (conv_init): check empty name.

Fri Aug 15 09:03:54 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_init): don't create dummy encoding if
	  rb_econv_open is failed.
	  (make_dummy_encoding): new function extracted from make_encoding.
	  (make_encoding): removed.

Fri Aug 15 01:07:16 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk ({$(srcdir)}.y.c): escape backslash.

Fri Aug 15 01:05:39 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_primitive_convert): set destination_buffer
	  encoding.

Fri Aug 15 00:52:40 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (rb_econv_output): declared.

	* transcode_data.h (rb_transcoder): add resetsize_func field.

	* enc/trans/iso2022.trans (iso2022jp_reset_sequence_size): defined.
	  (rb_EUC_JP_to_ISO_2022_JP): provede resetsize_func.

	* tool/transcode-tblgen.rb: set NULL for resetsize_func.

	* transcode.c (rb_econv_output): new function for inserting output.
	  (output_replacement_character): use rb_econv_output.
	  (transcode_loop): check return value of
	  output_replacement_character.

Thu Aug 14 23:47:21 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (ECONV_UNIVERSAL_NEWLINE_DECODER): defined.
	  (ECONV_CRLF_NEWLINE_ENCODER): ditto.