@@ -1,3 +1,9 @@
+Fri Aug 15 18:33:22 2008  Tanaka Akira  <akr@fsij.org>
+
+	* include/ruby/encoding.h (rb_econv_t): add error_tc in last_error.
+
+	* transcode.c (rb_econv_convert): fill error_tc.
+
 Fri Aug 15 18:10:49 2008  Tanaka Akira  <akr@fsij.org>
 
 	* include/ruby/encoding.h (rb_econv_t): new field: last_error.
